--- a/web/pom.xml
+++ b/web/pom.xml
@@ -21,14 +21,9 @@
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>javax.servlet.jsp.jstl</groupId>-->
-        <!--<artifactId>jstl-api</artifactId>-->
-        <!--<version>1.2</version>-->
-        <!--</dependency>-->
         <dependency>
-            <groupId>javax.servlet.jsp.jstl</groupId>
-            <artifactId>jstl</artifactId>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jstl-impl</artifactId>
             <version>1.2</version>
         </dependency>
     </dependencies>
